2006-09-03  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/amazon.rb: follow up to change <title> format and
	image URL (closes #70) .

2006-09-03  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* misc/webrick/hikilet.rb: session_id bug fix.

2006-09-02  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki/plugin.rb: use URI.parse() instead of URI(). (Ticket-66)

	* misc/webrick/hikilet.rb: cookies bug fix.

2006-08-08  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (cmd_view): set correct references (closes #68).

2006-08-07  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/bbs.rb: revise HTML.

	* misc/plugin/its.rb: enable adding a comment and changing
	properties with a single post.
	
	* hiki/plugin.rb: add accessors of session_id.
	* misc/plugin/bbs.rb, misc/plugin/comment.rb, misc/plugin/its.rb:
	validate a session_id.
	* hiki/command.rb: create a new session if a session_id is invalid.
	* hiki/session.rb: save a session file if @user is nil.

2006-08-05  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (replace_inline): do not convert
	tag texts at all (reported by shino).

	* misc/plugin/rank.rb: return an empty string in body_leave_proc.

	* hiki/db/ptstore.rb: inherit the PStore class and rewrite
	cache-related codes.

	* hiki/command.rb (cmd_view): update references only when
	references differ from previous.

	* hiki/command.rb (cmd_view), misc/plugin/rank.rb: increment a
	counter only when the 'rank.rb' plugin is active.

2006-07-31  Kazuhiko  <kazuhiko@fdiary.net>
	* hikiconf.rb.sample, hiki/command.rb, hiki/config.rb,
	misc/plugin/bbs.rb, misc/plugin/comment.rb, misc/plugin/its.rb:
	add '@conf.use_session' to prevent spams.

	* style/default/hikidoc.rb: sync with hikidoc rev.38.
	  support nested modifier (reported by MoonWolf).

2006-07-21  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki/page.rb, misc/hikifarm/index.cgi, misc/plugin/referer.rb,
	misc/plugin/trackback.rb: check request_method exactly.
