@@ -152,6 +152,7 @@ def its_get_tickets
 end
 
 def its_add_ticket_post
+  return '' unless postable?
   return '' if @conf.use_session && @session_id != @cgi['session_id']
 
   priority = @cgi['priority']
@@ -194,6 +195,7 @@ EOS
 end
 
 def its_edit_ticket_post
+  return '' unless postable?
   return '' if @conf.use_session && @session_id != @cgi['session_id']
 
   result = "\n"
