@@ -1,3 +1,11 @@
+2006-10-04  Kazuhiko  <kazuhiko@fdiary.net>
+
+	* plugin/00default.rb: add postable?.
+	* hiki/command.rb, misc/plugin/bbs.rb, misc/plugin/comment.rb,
+	misc/plugin/its.rb: use postable?.
+	* misc/plugin/rbl.rb: add a new plugin that overrides postable? by
+	looking up Realtime Blackhole Lists.
+
 2006-09-03  Kazuhiko  <kazuhiko@fdiary.net>
 	* misc/plugin/amazon.rb: follow up to change <title> format and
 	image URL (closes #70) .
